metadata/force-app/main/default/objects/Client_Story__c/Client_Story__c.object-meta.xml
<CustomObject>
    <label>Client Story</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>