metadata/force-app/main/default/objects/Client_Story__c/fields/Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Stories (Contact 3)</relationshipLabel>
    <relationshipName>Client_Stories1</relationshipName>
    <type>Lookup</type>
</CustomField>