metadata/force-app/main/default/objects/Client_Story__c/fields/Date_client_contacted__c.field-meta.xml
<CustomField>
    <fullName>Date_client_contacted__c</fullName>
    <inlineHelpText>What date was the client contacted to request the client story?</inlineHelpText>
    <label>Date client contacted</label>
    <type>Date</type>
</CustomField>