metadata/force-app/main/default/objects/Client_Story__c/fields/Date_to_be_published__c.field-meta.xml
<CustomField>
    <fullName>Date_to_be_published__c</fullName>
    <inlineHelpText>When will this case study be made available?</inlineHelpText>
    <label>Date to be published</label>
    <type>Date</type>
</CustomField>