metadata/force-app/main/default/objects/Client_Story__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>CSM reached out</fullName>
            </value>
            <value>
                <fullName>In contact with CS Marketeer</fullName>
            </value>
            <value>
                <fullName>Date set to create content</fullName>
            </value>
            <value>
                <fullName>Champion approved</fullName>
            </value>
            <value>
                <fullName>Legal approved</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>