metadata/force-app/main/default/objects/Client_Story__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analyst Reference</fullName>
            </value>
            <value>
                <fullName>Customer Quotations</fullName>
            </value>
            <value>
                <fullName>Customer Success Story</fullName>
            </value>
            <value>
                <fullName>New Business Reference</fullName>
            </value>
            <value>
                <fullName>Press Reference</fullName>
            </value>
            <value>
                <fullName>RFP Mention</fullName>
            </value>
            <value>
                <fullName>Speaking Opportunities</fullName>
            </value>
            <value>
                <fullName>Video Case Study</fullName>
            </value>
            <value>
                <fullName>Webinars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>