metadata/force-app/main/default/objects/Client_Story__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>Where can this client story be found?</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>